# Education_Nationale

./: merge_ipynb.py  pyproject.toml
1PC/1pc-rappels-de-python/: 1pc-rappels-de-python.ipynb
1PC/1pc-rappels-de-python-correction/: 1pc-rappels-de-python-correction.ipynb
SNT/snt-tp1-python/: snt-tp1-python.ipynb
SNT/snt-tp1-python-correction/: snt-tp1-python-correction.ipynb
SNT/snt-tp2-python/: snt-tp2-python.ipynb
SNT/snt-tp2-python-correction/: snt-tp2-python-correction.ipynb
SNT/snt-tp3-python/: snt-tp3-python.ipynb
SNT/snt-tp3-python-correction/: snt-tp3-python-correction.ipynb
SNT/snt-tp4-python/: snt-tp4-python.ipynb
SNT/snt-tp4-python-correction/: snt-tp4-python-correction.ipynb
