[tool.poetry]
name = "roumanille"
version = "0.1.0"
description = ""
authors = ["Rémi MEVAERE <51992495+mevaere@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.23.2"
matplotlib = "^3.5.3"
pandas = "^1.4.3"
notebook = "^6.4.12"
jupyter = "^1.0.0"
nbmerge = "^0.0.4"
nbformat = "^5.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
